# clio

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  manifest.scm
.specify/memory/: constitution.md
clio-history/: Cargo.toml
clio-history/src/: main.rs
clio-history/src/ui/: entry_object.rs  entry_row.rs  mod.rs  window.rs
specs/001-clipboard-manager/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-clipboard-manager/checklists/: requirements.md
specs/001-clipboard-manager/contracts/: cli.md
specs/002-config-subcommands/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-config-subcommands/checklists/: requirements.md
specs/002-config-subcommands/contracts/: cli.md
specs/003-clipboard-sync/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-clipboard-sync/checklists/: requirements.md
specs/003-clipboard-sync/contracts/: cli.md
specs/004-history-preview/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-history-preview/checklists/: requirements.md
specs/004-history-preview/contracts/: cli.md
specs/005-history-ux-images/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-history-ux-images/checklists/: requirements.md
specs/005-history-ux-images/contracts/: cli.md
specs/006-history-row-separators/: plan.md  research.md  spec.md  tasks.md
specs/006-history-row-separators/checklists/: requirements.md
specs/007-readme-docs/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-readme-docs/checklists/: requirements.md
specs/008-clipboard-actions/: spec.md
specs/008-clipboard-actions/checklists/: requirements.md
specs/009-memory-optimization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-memory-optimization/checklists/: requirements.md
src/: actions.rs  errors.rs  lib.rs  main.rs  platform.rs  time_fmt.rs
src/cli/: config.rs  copy.rs  history.rs  list.rs  mod.rs  select.rs  show.rs  watch.rs
src/cli/watch/: mod.rs  state.rs
src/clipboard/: mod.rs  protocol.rs  serve.rs  source_app.rs
src/config/: mod.rs  types.rs
src/db/: migrations.rs  mod.rs  repository.rs
src/models/: entry.rs  mod.rs
src/ui/: entry_object.rs  entry_row.rs  mod.rs  window.rs
tests/: cli.rs
