[package]
name = "clio"
version = "0.1.0"
edition = "2021"
description = "A clipboard manager with SQLite history and GTK4 UI"

[dependencies]
anyhow = "1"
arboard = { version = "3", features = ["wayland-data-control"] }
blake3 = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
directories = "5"
gtk4 = { version = "0.9", features = ["v4_12"], optional = true }
humantime-serde = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"

[features]
default = ["ui"]
ui = ["dep:gtk4"]

[profile.release]
lto = true
strip = true
debug = false
codegen-units = 1

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"

[lints.clippy]
all = "warn"
