[workspace]
members = [".", "clio-history"]

[package]
name = "clio"
version = "1.0.0"
edition = "2021"
description = "A clipboard manager with SQLite history"
license = "MIT"
repository = "https://github.com/johnlepikhin/clio"
readme = "README.md"
keywords = ["clipboard", "history", "linux"]
categories = ["command-line-utilities"]
exclude = ["specs/", ".specify/", "manifest.scm", "CLAUDE.md"]

[dependencies]
anyhow = "1"
arboard = { version = "3", features = ["wayland-data-control"] }
blake3 = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
directories = "5"
env_logger = { version = "0.11", default-features = false }
humantime = "2"
libc = "0.2"
log = "0.4"
humantime-serde = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = { package = "serde_yaml_ng", version = "0.9" }
thiserror = "2"
wait-timeout = "0.2"
x11rb = { version = "0.13", optional = true, default-features = false }

[features]
default = ["x11-source-app"]
x11-source-app = ["dep:x11rb"]

[profile.release]
lto = true
strip = true
debug = false
codegen-units = 1

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"

[lints.clippy]
all = "warn"
